--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron">
+            <div class="botoes">
+                <button class="cor_robo" id="preto"></button>
+                <button class="cor_robo" id="azul"></button>
+                <button class="cor_robo" id="vermelho"></button>
+                <button class="cor_robo" id="amarelo"></button>
+                <button class="cor_robo" id="branco"></button>
+                <button class="cor_robo" id="rosa"></button>
+            </div>
+            <img class="robo" src="img/robotron.png" alt="Robotron" data-robotron>
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
