--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="cor_robo" id="branco"></button>
                 <button class="cor_robo" id="rosa"></button>
             </div>
-            <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron">
+            <img class="robo" src="img/robotron-preto.png" alt="Robotron" id="robotron">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
